<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smallangrycoders.nevermorepayforwater">
    <item android:id="@+id/refresh_all"
        android:title="@string/refresh_all"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always|withText"/>

    <item android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always|withText"/>

    <item android:id="@+id/deleteAll"
        android:title="@string/deleteAll"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit"
        app:showAsAction="ifRoom|withText"/>
</menu>